I redo my final version of my Project 2 Part 1 and Part 2 of the course CSE341 from BYU Pathway Worldwide
