# routes/cakes.js
@@ -1,9 +1,12 @@
 const express = require("express");
 const router = express.Router();
 const cakesController = require("../controllers/cakes");
+
+// Middlewares this part is about security in my Database
 const { isAuthenticated } = require("../middleware/authenticate");
 const validator = require("../middleware/validate");
 
+// Here we have GET
 router.get("/", cakesController.getAllCakes);
 
 // My old routes when anyone have access to create, update and delete cakes.
@@ -19,6 +22,8 @@ router.post(
   validator.validate,
   cakesController.createCake,
 );
+
+// This is the PUT route for updating cakes
 router.put(
   "/:id",
   isAuthenticated,
@@ -26,6 +31,8 @@ router.put(
   validator.validate,
   cakesController.updateCake,
 );
+
+// finaly, here it`s the DELETE route
 router.delete("/:id", isAuthenticated, cakesController.deleteCake);
 
 module.exports = router;
